# multibar

./: LICENSE  README.md  pyproject.toml
multibar/: __init__.py  core.py  display.py  utils.py  worker.py
tests/: test_multibar.py  test_utils.py  test_worker.py
